deploy/deploy-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      run: webapp
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
        - name: webapp
          image: alanlab/lab-ecommnerce
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
