deploy/deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      run: webapp
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
        - name: webapp
          image: gcr.io/rails-lab-260819/loja:1.0.9
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
