deploy/deploy-prod.yml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      run: webapp
  template:
    metadata:
      labels:
        run: webapp
    spec:
      containers:
        - name: webapp
          image: gcr.io/rails-lab-260819/e-commerce:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: webapp
  name: webapp-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: webapp
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lab-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lab-ip
spec:
  backend:
    serviceName: webapp-service
    servicePort: 80
